force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Application__c.field-meta.xml
<CustomField>
    <fullName>agf__Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Application record pertinent to this request.</inlineHelpText>
    <label>Application</label>
    <referenceTo>agf__ADM_Application__c</referenceTo>
    <relationshipLabel>eRelease Requests</relationshipLabel>
    <relationshipName>eRelease_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>