force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Assignees_Verified__c.field-meta.xml
<CustomField>
    <fullName>agf__Assignees_Verified__c</fullName>
    <inlineHelpText>Select &quot;Yes&quot; if the correct Assignee and QA Engineer are specified in the Bug. If you specify &quot;No,&quot; you must ensure that the assignees are correct prior to eRelease approval and deployment.</inlineHelpText>
    <label>Assignees Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>