force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Bug_ID__c.field-meta.xml
<CustomField>
    <fullName>agf__Bug_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup from eRelease to Bugs</description>
    <inlineHelpText>Specify the Bug (Work record) that needs to be fixed by the requested eRelease. If there are multiple bugs, file multiple eRelease Requests.</inlineHelpText>
    <label>Bug ID</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipLabel>eRelease Requests</relationshipLabel>
    <relationshipName>eRelease_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>