force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Bug_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Bug_Name__c</fullName>
    <description>This field is only used by the email templates used by the eRelease Request trigger for sending notification emails.</description>
    <formula>agf__Bug_ID__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bug Name</label>
    <type>Text</type>
</CustomField>