force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Bug_Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Bug_Product_Owner__c</fullName>
    <label>Bug Product Owner</label>
    <type>Email</type>
</CustomField>