force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Bug_QE__c.field-meta.xml
<CustomField>
    <fullName>agf__Bug_QE__c</fullName>
    <label>Bug QE</label>
    <type>Email</type>
</CustomField>