force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Bug_Subject__c.field-meta.xml
<CustomField>
    <fullName>agf__Bug_Subject__c</fullName>
    <formula>agf__Bug_ID__r.agf__Subject__c</formula>
    <label>Bug Subject</label>
    <type>Text</type>
</CustomField>