force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Checkin_Location__c.field-meta.xml
<CustomField>
    <fullName>agf__Checkin_Location__c</fullName>
    <defaultValue>&quot;The Release Manager will specify the checkin location for the fix and Scheduled Build to use for the checkin.&quot;</defaultValue>
    <inlineHelpText>The Release Manager will specify in this field the checkin location for the fix and the Scheduled Build to use for the checkin.</inlineHelpText>
    <label>Checkin Details</label>
    <type>TextArea</type>
</CustomField>