force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Customer_Impact__c.field-meta.xml
<CustomField>
    <fullName>agf__Customer_Impact__c</fullName>
    <description>Describes the customer impact of the eRelease</description>
    <inlineHelpText>Describe the customer impact of the defect driving this request, including the impact that will result based on when and whether this eRelease is deployed.</inlineHelpText>
    <label>Customer Impact</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>