force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Deployment_Type__c</fullName>
    <inlineHelpText>Please indicate what type of deployment is required for this eRelease.</inlineHelpText>
    <label>Deployment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONFIG</fullName>
            </value>
            <value>
                <fullName>DOCS (Chatter HTML)</fullName>
            </value>
            <value>
                <fullName>DOCS (H&amp;T 2.0)</fullName>
            </value>
            <value>
                <fullName>DOCS (PDF)</fullName>
            </value>
            <value>
                <fullName>JAVA, PLSQL</fullName>
            </value>
            <value>
                <fullName>JSP Pages</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>