force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Does_Bug_Priority_meet_criteria__c.field-meta.xml
<CustomField>
    <fullName>agf__Does_Bug_Priority_meet_criteria__c</fullName>
    <description>Evaluates the referenced Bug&apos;s Priority and displays whether it meets eRelease Request criteria.</description>
    <formula>CASE(agf__Request_Type__c , 
&quot;Planned eRelease&quot;, &quot;Priority is not part of the Planned eRelease justification criteria.&quot;, 
&quot;Emergency Late Checkin&quot;, 
IF(ISPICKVAL(agf__Bug_ID__r.agf__Priority__c, &quot;P0&quot;), &quot;P0: MEETS Emergency Late Checkin Criteria&quot;, 
IF(ISPICKVAL(agf__Bug_ID__r.agf__Priority__c, &quot;P1&quot;), &quot;P1: MAY MEET Emergency Late Checkin criteria if issue has a Sev1 or Sev2 Investigation or Sev3 Red Account Investigation&quot;, 
TEXT(agf__Bug_ID__r.agf__Priority__c) + &quot;: DOES NOT MEET Emergency Late Checkin criteria&quot;)), 
&quot;Emergency Release&quot;, 
IF(ISPICKVAL(agf__Bug_ID__r.agf__Priority__c, &quot;P0&quot;), &quot;P0: MEETS Emergency Release criteria&quot;, 
IF(ISPICKVAL(agf__Bug_ID__r.agf__Priority__c, &quot;P1&quot;), &quot;P1: MAY MEET Emergency Release criteria if issue has a Sev1 or Sev2 Investigation or Sev3 Red Account Investigation&quot;, 
TEXT(agf__Bug_ID__r.agf__Priority__c) + &quot;: DOES NOT MEET Emergency Release criteria&quot;)), 
&quot;Unrecognized Request Type&quot;)</formula>
    <inlineHelpText>Displays whether the referenced Bug&apos;s Priority meets the eRelease Request criteria.</inlineHelpText>
    <label>Does Bug Priority meet criteria?</label>
    <type>Text</type>
</CustomField>