force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Escalate_for_nonstandard_deployment__c.field-meta.xml
<CustomField>
    <fullName>agf__Escalate_for_nonstandard_deployment__c</fullName>
    <inlineHelpText>Please indicate if this issue is critical enough to warrant discussing an eRelease outside of the standard instance-based release times (GUS, CSx&apos;s and EUx can start at 3PM PST. NAx after 4PM PST. APx is the next day before 11AM PST)</inlineHelpText>
    <label>Escalate for nonstandard deployment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>