force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Instance_for_Verification__c.field-meta.xml
<CustomField>
    <fullName>agf__Instance_for_Verification__c</fullName>
    <inlineHelpText>If instances that are not the default verification instances must be used to verify this fix, provide instance or instances in this field.</inlineHelpText>
    <label>Verification Instance</label>
    <type>TextArea</type>
</CustomField>