force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Other_Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Other_Deployment_Type__c</fullName>
    <description>Used when the request for Deployment Type includes &quot;Other.&quot;</description>
    <inlineHelpText>Use this field when the request for Deployment Type includes &quot;Other.&quot;</inlineHelpText>
    <label>Other Deployment Type</label>
    <type>TextArea</type>
</CustomField>