force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>agf__Other_Notes__c</fullName>
    <label>Other Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>