force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Other_Testing__c.field-meta.xml
<CustomField>
    <fullName>agf__Other_Testing__c</fullName>
    <inlineHelpText>Please specify testing details if &quot;None Required&quot; or &quot;Other&quot; selected.</inlineHelpText>
    <label>Testing Notes</label>
    <type>TextArea</type>
</CustomField>