force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Peripheral_Impacts__c.field-meta.xml
<CustomField>
    <fullName>agf__Peripheral_Impacts__c</fullName>
    <inlineHelpText>Please explain any other peripheral impacts of this eRelease that may require follow-up.</inlineHelpText>
    <label>Peripheral Impacts</label>
    <type>TextArea</type>
</CustomField>