force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Release_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Team_Comments__c</fullName>
    <inlineHelpText>Instructions related to the approval or rejection of this request. If more information is needed to evaluate this request, the required information will be specified in this field.</inlineHelpText>
    <label>Additional Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>