force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Requested_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Requested_Deployment_Date__c</fullName>
    <label>Requested Deployment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>