force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Build__c</fullName>
    <description>Scheduled Build for the Bug for which the eRelease has been requested</description>
    <formula>agf__Bug_ID__r.agf__Scheduled_Build__r.Name</formula>
    <inlineHelpText>The Scheduled Build of this Bug</inlineHelpText>
    <label>Scheduled Build</label>
    <type>Text</type>
</CustomField>