force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Staging_Instructions__c.field-meta.xml
<CustomField>
    <fullName>agf__Staging_Instructions__c</fullName>
    <inlineHelpText>To be filled out by Release Manager</inlineHelpText>
    <label>Staging Instructions</label>
    <length>500</length>
    <type>Html</type>
</CustomField>