force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Target_Instances__c.field-meta.xml
<CustomField>
    <fullName>agf__Target_Instances__c</fullName>
    <defaultValue>&quot;Specify target instances for this fix as a comma-separated list when not all instances are to receive this fix.&quot;</defaultValue>
    <inlineHelpText>Specify target instances for this fix as a comma-separated list when not all instances are to receive this fix.</inlineHelpText>
    <label>Target Instances</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>