force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Who_is_verifying_fix_in_prod__c.field-meta.xml
<CustomField>
    <fullName>agf__Who_is_verifying_fix_in_prod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specify who will be verifying the bug in production following the deployment of this fix.</inlineHelpText>
    <label>Who is verifying fix in prod?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>eRelease_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>