force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/fields/agf__Who_is_working_with_ProductOps__c.field-meta.xml
<CustomField>
    <fullName>agf__Who_is_working_with_ProductOps__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is working with Product Operations on customer communications for this issue?</inlineHelpText>
    <label>Who is working with ProductOps?</label>
    <referenceTo>User</referenceTo>
    <relationshipName>eRelease_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>