force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/validationRules/agf__Checkin_Location_Must_Be_Specified.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Checkin_Location_Must_Be_Specified</fullName>
    <active>true</active>
    <description>When the eRelease Status is set to Approved, the default message must be replaces with checkin location and scheduled build.</description>
    <errorConditionFormula>AND( ISPICKVAL( agf__eRelease_Status__c , &quot;Approved&quot;), OR( ISBLANK(agf__Checkin_Location__c), 
BEGINS( agf__Checkin_Location__c , &quot;The Release Manager will specify the checkin location for the fix and Scheduled Build to use for the checkin.&quot;)))</errorConditionFormula>
    <errorDisplayField>agf__Checkin_Location__c</errorDisplayField>
    <errorMessage>You must remove the default text in the Checkin Details field and specify the checkin location and scheduled build.</errorMessage>
</ValidationRule>