force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/validationRules/agf__Instances_must_be_specified.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Instances_must_be_specified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(agf__Use_Default_Verification_Instance__c, &apos;No&apos;), ISBLANK(agf__Instance_for_Verification__c))</errorConditionFormula>
    <errorDisplayField>agf__Instance_for_Verification__c</errorDisplayField>
    <errorMessage>Verification instances must be specified when &quot;No&quot; selected for the &quot;Default Verification Instance?&quot; field.</errorMessage>
</ValidationRule>