force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/validationRules/agf__Release_required_when_ERR_is_Released.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Release_required_when_ERR_is_Released</fullName>
    <active>true</active>
    <errorConditionFormula>( agf__Released_In__c = NULL)   &amp;&amp;  ISPICKVAL(agf__eRelease_Status__c, &quot;Released&quot;)</errorConditionFormula>
    <errorDisplayField>agf__Released_In__c</errorDisplayField>
    <errorMessage>Release must be specified when eRelease Status is &quot;Released&quot;</errorMessage>
</ValidationRule>