force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/validationRules/agf__Specify_Target_Instances.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Specify_Target_Instances</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(agf__Deploy_to_all_Instances__c, &quot;No - specific instances&quot;), 
OR( ISBLANK(agf__Target_Instances__c), 
BEGINS(agf__Target_Instances__c, &quot;Specify target instances for this fix as a comma-separated list when not all instances are to receive this fix.&quot;)))</errorConditionFormula>
    <errorDisplayField>agf__Target_Instances__c</errorDisplayField>
    <errorMessage>You must specify target instances for this fix as a comma-separated list when not all instances are to receive this fix.</errorMessage>
</ValidationRule>