force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/validationRules/agf__Status_must_be_Released_when_Released_In.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Status_must_be_Released_when_Released_In</fullName>
    <active>true</active>
    <description>When the Released In field is used, the eRelease Status must be &apos;Released&apos; or &apos;Approved&apos;.</description>
    <errorConditionFormula>AND(
  NOT(
      OR(ISPICKVAL(agf__eRelease_Status__c, &quot;Released&quot;),   
         ISPICKVAL(agf__eRelease_Status__c, &quot;Approved&quot;))),  
  NOT(ISBLANK(agf__Released_In__c))
)</errorConditionFormula>
    <errorDisplayField>agf__eRelease_Status__c</errorDisplayField>
    <errorMessage>eRelease Status must be &apos;Released&apos; or &apos;Approved&apos; when Released In is specified. Please clear the Released In field or set the eRelease Status to &apos;Released&apos; or &apos;Approved&apos;.</errorMessage>
</ValidationRule>