force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__eRelease_Request__c/validationRules/agf__Testing_Notes_required_if_Other_or_None.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Testing_Notes_required_if_Other_or_None</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( INCLUDES(agf__Testing_Required__c, &quot;Other&quot;), 
INCLUDES(agf__Testing_Required__c, &quot;None required&quot;)), 
OR( ISBLANK( agf__Other_Testing__c ), BEGINS(agf__Other_Testing__c, &apos;Please specify testing details if &quot;None Required&quot; or &quot;Other&quot; selected.&apos;)) )</errorConditionFormula>
    <errorDisplayField>agf__Other_Testing__c</errorDisplayField>
    <errorMessage>You must specify testing details if &quot;None Required&quot; or &quot;Other&quot; selected for Testing Required.</errorMessage>
</ValidationRule>